--- a/ver2/style.css
+++ b/ver2/style.css
@@ -1,7 +1,7 @@
 *{
     margin:0px;
     padding:0px;
-    outline: 1px red solid;
+    /* outline: 1px red solid; */
     font-family: Arial, Helvetica, sans-serif;
 }
 
